tests/negative/comptime_invalid_shift_amount.ora
contract ComptimeInvalidShiftAmount {
    pub fn run() -> u256 {
        return comptime {
            1 << -1;
        };
    }
}
